소스 업데이트

--- a/index.html
+++ b/index.html
@@ -1173,7 +1173,7 @@
     <!-- section 끝 -->
     <a href="#intro" class="top-btn"><span class="fontcon-arrow_movetop"></span></a>
     <!-- footer시작 -->
-    <footer id="footer">
+    <footer id="footer" class="foot">
         <div class="wrapper">
             <div class="footer-in">
                 <h4 class="foot-logo"><img src="./images/logo.svg" alt=""><span class="logo-text">월드로지텍</span></h4>
