--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,6 @@
                                         </tr>
                                     </tbody>
                                 </table>
->>>>>>> 47a42505856474d96496fbd5fbfce267a5686dbe
                             </div>
                         </div>
                     </div>
@@ -1170,9 +1169,10 @@
     </section>
     <!-- LOCATION SECTION 종료 -->
 
-    <!-- section 끝 -->
-    <a href="#intro" class="top-btn"><span class="fontcon-arrow_movetop"></span></a>
-    <!-- footer시작 -->
+    <!-- TOP BTN  -->
+    <div class="top-btnbox"><a href="#intro" class="top-btn"><span class="fontcon-arrow_movetop"></span></a></div>
+
+    <!-- FOOTER 시작 -->
     <footer id="footer" class="foot">
         <div class="wrapper">
             <div class="footer-in">
@@ -1191,7 +1191,7 @@
             </div>
         </div>
     </footer>
-    <!-- // footer 끝 -->
+    <!-- // FOOTER 끝 -->
 </body>
 
 </html>
