링크값 변경

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- // HEADER 끝 -->
 
     <!-- HOME SECTION 시작 -->
-    <section class="panel intro" id="introCont" data-section-name="intro">
+    <section class="panel intro" id="intro" data-section-name="intro">
         <div class="visual-slider">
             <div class="swiper">
                 <div class="swiper-wrapper">
@@ -89,7 +89,7 @@
     <!-- HOME SECTION 종료-->
 
     <!-- ABOUT SECTION 시작 -->
-    <section class="panel about" id="aboutCont" data-section-name="about">
+    <section class="panel about" id="about" data-section-name="about">
         <div class="wrapper">
             <div class="about-in">
                 <div class="panel-top">
@@ -161,7 +161,7 @@
     <!-- ABOUT SECTION 종료 -->
 
     <!-- BUSINESS SECTION 시작 -->
-    <section class="panel business" id="businessCont" data-section-name="business">
+    <section class="panel business" id="business" data-section-name="business">
         <div class="wrapper">
             <div class="business-in">
                 <div class="panel-top">
@@ -254,7 +254,7 @@
     <!-- BUSINESS SECTION 종료 -->
 
     <!-- POSITIONS SECTION 시작 -->
-    <section class="panel positions" id="positionsCont" data-section-name="positions">
+    <section class="panel positions" id="positions" data-section-name="positions">
         <div class="wrapper">
             <div class="positions-in">
                 <div class="panel-top color-white">
@@ -334,7 +334,7 @@
     <!-- POSITIONS SECTION 종료 -->
 
     <!-- PRODUCTS SECTION 시작 -->
-    <section class="panel products" id="productsCont" data-section-name="products" style="background-color: #ddd;">
+    <section class="panel products" id="products" data-section-name="products" style="background-color: #ddd;">
         <div class="products-in">
             <div class="panel-top color-white">
                 <div class="panel-title">
@@ -1135,7 +1135,7 @@
     <!-- PRODUCTS SECTION 종료 -->
 
     <!-- LOCATION SECTION 시작 -->
-    <section class="panel location" id="locationCont" data-section-name="location">
+    <section class="panel location" id="location" data-section-name="location">
         <div class="wrapper">
             <div class="location-in">
                <div class="panel-top ac">
