팝업 반응형

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-content">
+                            <div class="tab-content table-wrap">
                                 <table class="table-data">
                                     <colgroup> 
                                         <col>
@@ -908,7 +908,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-content">
+                            <div class="tab-content table-wrap">
                                 <table class="table-data">
                                     <colgroup> 
                                         <col>
