--- a/index.html
+++ b/index.html
@@ -888,48 +888,66 @@
                                         <div class="list-items">
                                             <div class="list-item">
                                                 <img src="./images/kia_car_1.jpg" alt="">
-                                                <span>판넬 어셈블리</span>
-                                                <p>후드</p>
+                                                <div class="list-text">
+                                                    <span>판넬 어셈블리</span>
+                                                    <p>후드</p>
+                                                </div>
                                             </div>
                                             <div class="list-item">
                                                 <img src="./images/kia_car_2.jpg" alt="">
-                                                <span>판넬 어셈블리</span>
-                                                <p>트렁크 리드</p>
+                                                <div class="list-text">
+                                                    <span>판넬 어셈블리</span>
+                                                    <p>트렁크 리드</p>
+                                                </div>
                                             </div>
                                             <div class="list-item">
                                                 <img src="./images/kia_car_3.jpg" alt="">
-                                                <span>판넬 어셈블리</span>
-                                                <p>프론트 도어 (좌우)</p>
+                                                <div class="list-text">
+                                                    <span>판넬 어셈블리</span>
+                                                    <p>프론트 도어 (좌우)</p>
+                                                </div>
                                             </div>
                                             <div class="list-item">
                                                 <img src="./images/kia_car_4.jpg" alt="">
-                                                <span>판넬 어셈블리</span>
-                                                <p>리어 도어 (좌우)</p>
+                                                <div class="list-text">
+                                                    <span>판넬 어셈블리</span>
+                                                    <p>리어 도어 (좌우)</p>
+                                                </div>
                                             </div>
                                             <div class="list-item">
                                                 <img src="./images/kia_car_5.jpg" alt="">
-                                                <span>판넬 어셈블리</span>
-                                                <p>팬더(좌우)</p>
+                                                <div class="list-text">
+                                                    <span>판넬 어셈블리</span>
+                                                    <p>팬더(좌우)</p>
+                                                </div>
                                             </div>
                                             <div class="list-item">
                                                 <img src="./images/kia_car_6.jpg" alt="">
-                                                <span>판넬 어셈블리</span>
-                                                <p>후휀다(좌우)</p>
+                                                <div class="list-text">
+                                                    <span>판넬 어셈블리</span>
+                                                    <p>후휀다(좌우)</p>
+                                                </div>
                                             </div>
                                             <div class="list-item">
                                                 <img src="./images/kia_car_7.jpg" alt="">
-                                                <span>캐리어 어셈블리</span>
-                                                <p>프론트 엔드 모듈</p>
+                                                <div class="list-text">
+                                                    <span>캐리어 어셈블리</span>
+                                                    <p>프론트 엔드 모듈</p>
+                                                </div>
                                             </div>
                                             <div class="list-item">
                                                 <img src="./images/kia_car_8.jpg" alt="">
-                                                <span>캐리어 어셈블리</span>
-                                                <p>백</p>
+                                                <div class="list-text">
+                                                    <span>캐리어 어셈블리</span>
+                                                    <p>백</p>
+                                                </div>
                                             </div>
                                             <div class="list-item">
                                                 <img src="./images/kia_car_9.jpg" alt="">
-                                                <span>패드</span>
-                                                <p>후드 인슐레이팅</p>
+                                                <div class="list-text">
+                                                    <span>패드</span>
+                                                    <p>후드 인슐레이팅</p>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
