--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header id="header">
         <div class="header-wrap">
             <div class="gnb">
-                <h1 class="logo"><span class="logo-text">월드로지텍</span></h1>
+                <h1 class="logo"><span class="skip">월드로지텍</span></h1>
                 <nav>
                     <ul class="pagination">
                         <li><a href="#intro" class="active">HOME</a></li>
@@ -1246,7 +1246,7 @@
     <footer id="footer" class="foot">
         <div class="wrapper">
             <div class="footer-in">
-                <h4 class="foot-logo"><img src="./images/logo.svg" alt=""><span class="logo-text">월드로지텍</span></h4>
+                <h4 class="foot-logo"><span class="skip">월드로지텍</span></h4>
                 <p>경기도 용인시 처인구 포곡로 326번길 26-7 (포곡읍 삼계리 350번지)</p>
                 <ul class="footer-info">
                     <li><span>TEL</span>031-399-9985</li>
