--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script defer src="./js/jquery.scrollify.js"></script>
+    <!-- <script defer src="./js/jquery.scrollify.js"></script> -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script defer src="./js/common.js"></script>
-    <script defer src="./js/scrollify.js"></script>
+    <!-- <script defer src="./js/scrollify.js"></script> -->
     <script defer src="./js/scrolling.js"></script>
     <script defer src="./js/slider.js"></script>
     <script>
