--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script defer src="./js/jquery.scrollify.js"></script>
+    <!-- <script defer src="./js/jquery.scrollify.js"></script> -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script defer src="./js/common.js"></script>
-    <script defer src="./js/scrollify.js"></script>
+    <!-- <script defer src="./js/scrollify.js"></script> -->
     <script defer src="./js/scrolling.js"></script>
     <script defer src="./js/slider.js"></script>
 </head>
@@ -57,7 +57,7 @@
                     <div class="swiper-slide">
                         <div class="slider-bg bg1"></div>
                         <div class="text-cont">
-                            <span class="sub-text">월드로지텍은123</span>
+                            <span class="sub-text">월드로지텍은123456</span>
                             <p><strong>안전하고<span class="bullet">·</span>성실하고<span class="bullet">·</span>정확</strong>합니다.
                             </p>
                         </div>
