--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>월드로지텍</title>
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
     <link rel="stylesheet" href="./css/wvFont.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./css/style.css"> -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script defer src="./js/jquery.scrollify.js"></script>
+    <!-- <script defer src="./js/jquery.scrollify.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script defer src="./js/common.js"></script>
     <script defer src="./js/scrollify.js"></script>
-    <script defer src="./js/scrolling.js"></script>
+    <script defer src="./js/scrolling.js"></script> -->
     <!-- <script defer src="./js/slider.js"></script> -->
 </head>
 
