--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <!-- <script defer src="./js/jquery.scrollify.js"></script>
-    <script defer src="./js/common.js"></script>
+    <script defer src="./js/jquery.scrollify.js"></script>
+    <!-- <script defer src="./js/common.js"></script>
     <script defer src="./js/scrollify.js"></script>
     <script defer src="./js/scrolling.js"></script> -->
     <!-- <script defer src="./js/slider.js"></script> -->
@@ -104,7 +104,7 @@
             <div class="about-in">
                 <div class="panel-top">
                     <div class="panel-title">
-                        <h2>About Us123</h2>
+                        <h2>About Us</h2>
                         <img src="./images/symbol.svg" alt="" />
                         <span>회사소개</span>
                     </div>
