--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script defer src="./js/jquery.scrollify.js"></script>
-    <!-- <script defer src="./js/common.js"></script>
-    <script defer src="./js/scrollify.js"></script>
+    <script defer src="./js/common.js"></script>
+    <!-- <script defer src="./js/scrollify.js"></script>
     <script defer src="./js/scrolling.js"></script> -->
     <!-- <script defer src="./js/slider.js"></script> -->
 </head>
