--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="swiper-slide">
                         <div class="slider-bg bg1"></div>
                         <div class="text-cont">
-                            <span class="sub-text">월드로지텍은123</span>
+                            <span class="sub-text">월드로지텍은</span>
                             <p><strong>안전하고<span class="bullet">·</span>성실하고<span class="bullet">·</span>정확</strong>합니다.
                             </p>
                         </div>
@@ -106,7 +106,7 @@
                     <div class="panel-title">
                         <h2>About Us</h2>
                         <img src="./images/symbol.svg" alt="" />
-                        <span>회사소개</span>
+                        <span>회사소개123</span>
                     </div>
                 </div>
                 <div class="about-slider">
