--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
             <div class="about-in">
                 <div class="panel-top">
                     <div class="panel-title">
-                        <h2>About Us</h2>
+                        <h2>About Us987</h2>
                         <img src="./images/symbol.svg" alt="" />
-                        <span>회사소개123</span>
+                        <span>회사소개</span>
                     </div>
                 </div>
                 <div class="about-slider">
