--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script defer src="./js/jquery.scrollify.js"></script>
     <script defer src="./js/common.js"></script>
     <script defer src="./js/scrollify.js"></script>
-    <!-- <script defer src="./js/scrolling.js"></script> -->
+    <script defer src="./js/scrolling.js"></script>
     <!-- <script defer src="./js/slider.js"></script> -->
 </head>
 
@@ -104,7 +104,7 @@
             <div class="about-in">
                 <div class="panel-top">
                     <div class="panel-title">
-                        <h2>About Us987</h2>
+                        <h2>About Us987000</h2>
                         <img src="./images/symbol.svg" alt="" />
                         <span>회사소개</span>
                     </div>
