--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script defer src="./js/common.js"></script>
     <script defer src="./js/scrollify.js"></script>
     <script defer src="./js/slider.js"></script>
-    <script defer src="./js/scrolling.js"></script>
+    <!-- <script defer src="./js/scrolling.js"></script> -->
 </head>
 
 <body>
