--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h1 class="logo"><span class="skip">월드로지텍</span></h1>
                 <nav>
                     <ul class="pagination">
-                        <li><a href="#intro" class="active">HOME</a></li>
+                        <li><a href="#intro">HOME</a></li>
                         <li><a href="#about">회사소개</a></li>
                         <li><a href="#business">경영방침</a></li>
                         <li><a href="#positions">주요역할</a></li>
