--- a/index.html
+++ b/index.html
@@ -1211,17 +1211,17 @@
                         <li>
                             <div class="location-icon"><img src="./images/tel.svg" alt="" /></div>
                             <p>TEL</p>
-                            <span>031-339-9985</span>
+                            <a href="tel:031-339-9985">031-339-9985</a>
                         </li>
                         <li>
                             <div class="location-icon"><img src="./images/fax.svg" alt="" /></div>
                             <p>FAX</p>
-                            <span>031-339-3317</span>
+                            <a href="fax:031-339-3317">031-339-3317</a>
                         </li>
                         <li>
                             <div class="location-icon"><img src="./images/email.svg" alt="" /></div>
                             <p>E-mail</p>
-                            <span>pcm9051@hanmail.net</span>
+                            <a href="mailto:pcm9051@hanmail.net">pcm9051@hanmail.net</a>
                         </li>
                     </ul>
                 </div>
