--- a/index.html
+++ b/index.html
@@ -1240,9 +1240,9 @@
                 <h4 class="foot-logo"><span class="skip">월드로지텍</span></h4>
                 <p>경기도 용인시 처인구 포곡로 326번길 26-7 (포곡읍 삼계리 350번지)</p>
                 <ul class="footer-info">
-                    <li><span>TEL</span>031-399-9985</li>
-                    <li><span>FAX</span>031-399-3317</li>
-                    <li><span>개인정보처리책임자</span>박찬무 pcm9051@hanmail.net</li>
+                    <li><span>TEL</span><a href="tel:031-339-9985">031-399-9985</a></li>
+                    <li><span>FAX</span><a href="fax:031-339-3317">031-399-3317</a></li>
+                    <li><span>개인정보처리책임자</span>박찬무 <a href="mailto:pcm9051@hanmail.net">pcm9051@hanmail.net</a></li>
                     <li><span>사업자등록번호</span>124-86-04908</li>
                 </ul>
                 <div class="copyright">
