--- a/index.html
+++ b/index.html
@@ -1238,7 +1238,7 @@
         <div class="wrapper">
             <div class="footer-in">
                 <h4 class="foot-logo"><span class="skip">월드로지텍</span></h4>
-                <p>경기도 용인시 처인구 포곡로 326번길 26-7 (포곡읍 삼계리 350번지11)</p>
+                <p>경기도 용인시 처인구 포곡로 326번길 26-7 (포곡읍 삼계리 350번지)</p>
                 <ul class="footer-info">
                     <li><span>TEL</span><a href="tel:031-339-9985">031-399-9985</a></li>
                     <li><span>FAX</span><a href="fax:031-339-3317">031-399-3317</a></li>
