--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="about-in">
                 <div class="panel-top">
                     <div class="panel-title">
-                        <h2>About Us222</h2>
+                        <h2>About Us333</h2>
                         <img src="./images/symbol.svg" alt="" />
                         <span>회사소개</span>
                     </div>
@@ -1252,6 +1252,7 @@
             </div>
         </div>
     </footer>
+    <div class="popup-bg"></div>
     <!-- // FOOTER 끝 -->
 </body>
 
