반응형  수정

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="about-in">
                 <div class="panel-top">
                     <div class="panel-title">
-                        <h2>About Us999</h2>
+                        <h2>About Us</h2>
                         <img src="./images/symbol.svg" alt="" />
                         <span>회사소개</span>
                     </div>
@@ -357,7 +357,8 @@
             <div class="panel-top color-white">
                 <div class="panel-title">
                     <h2>Our Products</h2>
-                    <img src="./images/symbol_w.svg" alt="" />
+                    <img src="./images/symbol_w.svg" class="mb-hide" alt="" />
+                    <img src="./images/symbol.svg" class="pc-hide" alt="" />
                     <span>제품안내</span>
                 </div>
             </div>
