반응형  수정

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="about-in">
                 <div class="panel-top">
                     <div class="panel-title">
-                        <h2>About Us555222</h2>
+                        <h2>About Us</h2>
                         <img src="./images/symbol.svg" alt="" />
                         <span>회사소개</span>
                     </div>
@@ -1490,7 +1490,7 @@
                 <div class="location-cont">
                     <ul>
                         <li>
-                            <div class="location-icon"><img src="./images/tel.svg" alt="" /></div>
+                            <div class="location-icon"><a href="tel:031-339-9985"><img src="./images/tel.svg" alt="" /></a></div>
                             <p>TEL</p>
                             <a href="tel:031-339-9985">031-339-9985</a>
                         </li>
@@ -1500,7 +1500,7 @@
                             <a href="fax:031-339-3317">031-339-3317</a>
                         </li>
                         <li>
-                            <div class="location-icon"><img src="./images/email.svg" alt="" /></div>
+                            <div class="location-icon"><a href="mailto:pcm9051@hanmail.net"><img src="./images/email.svg" alt="" /></a></div>
                             <p>E-mail</p>
                             <a href="mailto:pcm9051@hanmail.net">pcm9051@hanmail.net</a>
                         </li>
