--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script defer src="./js/scrollMove.js"></script>
     <script defer src="./js/scrollify.js"></script>
     <script defer src="./js/slider.js"></script>
+    <script src="some-path-where-you-dump-the-javascript-libraries/lib/bodyScrollLock.js"></script>
 </head>
 
 <body>
@@ -104,7 +105,7 @@
             <div class="about-in">
                 <div class="panel-top">
                     <div class="panel-title">
-                        <h2>About Usq888</h2>
+                        <h2>About Usq888111</h2>
                         <img src="./images/symbol.svg" alt="" />
                         <span>회사소개</span>
                     </div>
