--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <div class="slider-bg bg1"></div>
                         <div class="text-cont">
                             <span class="sub-text">월드로지텍은</span>
-                            <p><strong>안전하고<span class="bullet">·</span>성실하고<span class="bullet">·</span>정확</strong>합니다.
+                            <p><strong>안전하고<span class="bullet">·</span>성실하고<span class="bullet">·</span>정확</strong><br class="pc-hide" />합니다.
                             </p>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
             <div class="about-in">
                 <div class="panel-top">
                     <div class="panel-title">
-                        <h2>About Use</h2>
+                        <h2>About Us</h2>
                         <img src="./images/symbol.svg" alt="" />
                         <span>회사소개</span>
                     </div>
