--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="panel-title">
                         <h2>About Us</h2>
                         <img src="./images/symbol.svg" alt="" />
-                        <span>회사소개1212</span>
+                        <span>회사소개sdsfsf</span>
                     </div>
                 </div>
                 <div class="about-slider">
