--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                         <li><a href="#business">경영방침</a></li>
                         <li><a href="#positions">주요역할</a></li>
                         <li><a href="#products">제품안내</a></li>
+                        <li><a href="#partnership">파트너사</a></li>
                         <li><a href="#location">찾아오는 길</a></li>
                     </ul>
                 </nav>
@@ -1468,6 +1469,81 @@
         <!--POPUP 종료-->
     </section>
     <!-- PRODUCTS SECTION 종료 -->
+
+    <!--PARTNERSHIP 시작-->
+    <section class="panel partnership" data-section-name="partnership">
+        <div class="wrapper">
+            <div class="partnership-in">
+                <div class="panel-top ac">
+                    <div class="panel-title">
+                        <h2>Business Partnership</h2>
+                        <img src="./images/symbol.svg" alt="">
+                        <span>파트너사</span>
+                    </div>
+                </div>
+                <div class="partnership-cont">
+                    <ul>
+                        <li>
+                            <a href="http://www.vtex.co.kr/vtex-renew/index.html" target="_blank">
+                                <img src="./images/partnership_img1.jpg" alt="">
+                                <div class="partnership-contIn">
+                                    <h5>월드버텍 / WORLD VERTEX</h5>
+                                    <p>전문 S.I & S.M 업체로 20여년간 쌓아온 기술을 바탕으로
+                                        교육 토탈 서비스, AI 플랫폼 서비스, VR 서비스를 제공</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://flystation.kr/main/main.html" target="_blank">
+                                <img src="./images/partnership_img2.jpg" alt="">
+                                <div class="partnership-contIn">
+                                    <h5>플라이스테이션 / FLYSTATION</h5>
+                                    <p>플라잉 익스트림 스포츠 종합서비스 전문회사로 누구에게나
+                                        쉽고 안전한 실내스카이다이빙 경험을 제공</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.catchwell.com/" target="_blank">
+                                <img src="./images/partnership_img3.jpg" alt="">
+                                <div class="partnership-contIn">
+                                    <h5>캐치웰 / CATCHWELL</h5>
+                                    <p>로봇청소기, 무선청소기 등
+                                        감성적인 디자인 생활가전 대표브랜드</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://www.koion.kr/" target="_blank">
+                                <img src="./images/partnership_img4.jpg" alt="">
+                                <div class="partnership-contIn">
+                                    <h5>코이온텍 / KOIONTECH</h5>
+                                    <p>국내 특허 받은 신기술을 통해 전극보일러를
+                                        생산 / 판매하는 보일러 기업</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <img src="./images/partnership_img5.jpg" alt="">
+                            <div class="partnership-contIn">
+                                <h5>에버팩토리 / EVERFACTORY</h5>
+                                <p>Real Estate Leasing Business
+                                    현재 9개 업체가 사용중</p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./images/partnership_img6.jpg" alt="">
+                            <div class="partnership-contIn">
+                                <h5>월드프라자 / WORLD PLAZA</h5>
+                                <p>An office for a construction site</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--PARTNERSHIP 종료-->
 
     <!-- LOCATION SECTION 시작 -->
     <section class="panel location" data-section-name="location">
