파트너쉽 반응형 수정

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
     <link rel="stylesheet" href="./css/wvFont.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
@@ -1474,7 +1477,7 @@
     <section class="panel partnership" data-section-name="partnership">
         <div class="wrapper">
             <div class="partnership-in">
-                <div class="panel-top ac">
+                <div class="panel-top">
                     <div class="panel-title">
                         <h2>Business Partnership</h2>
                         <img src="./images/symbol.svg" alt="">
@@ -1528,7 +1531,7 @@
                             <div class="partnership-contIn">
                                 <h5>에버팩토리 / EVERFACTORY</h5>
                                 <p>Real Estate Leasing Business
-                                    현재 9개 업체가 사용중</p>
+                                    현재 12개 업체가 사용중</p>
                             </div>
                         </li>
                         <li>
@@ -1549,7 +1552,7 @@
     <section class="panel location" data-section-name="location">
         <div class="wrapper">
             <div class="location-in">
-               <div class="panel-top ac">
+               <div class="panel-top">
                     <div class="panel-title">
                         <h2>Location</h2>
                         <img src="./images/symbol.svg" alt="">
