이메일 주소 수정

--- a/index.html
+++ b/index.html
@@ -1579,9 +1579,9 @@
                             <a href="fax:031-339-3317">031-339-3317</a>
                         </li>
                         <li>
-                            <div class="location-icon"><a href="mailto:pcm9051@hanmail.net"><img src="./images/email.svg" alt="" /></a></div>
+                            <div class="location-icon"><a href="mailto:worldlog@daum.net"><img src="./images/email.svg" alt="" /></a></div>
                             <p>E-mail</p>
-                            <a href="mailto:pcm9051@hanmail.net">pcm9051@hanmail.net</a>
+                            <a href="mailto:worldlog@daum.net">worldlog@daum.net</a>
                         </li>
                     </ul>
                 </div>
@@ -1602,7 +1602,7 @@
                 <ul class="footer-info">
                     <li><span>TEL</span><a href="tel:031-339-9985">031-399-9985</a></li>
                     <li><span>FAX</span><a href="fax:031-339-3317">031-399-3317</a></li>
-                    <li><span>개인정보처리책임자</span>박찬무 <a href="mailto:pcm9051@hanmail.net">pcm9051@hanmail.net</a></li>
+                    <li><span>개인정보처리책임자</span>박찬무 <a href="mailto:worldlog@daum.net">worldlog@daum.net</a></li>
                     <li><span>사업자등록번호</span>124-86-04908</li>
                 </ul>
                 <div class="copyright">
